# BloodstockAI-Hub

./: .env.example  .gitignore  .vercelignore  README.md  next.config.ts  package-lock.json  package.json  railway.toml  tsconfig.json  tsconfig.tsbuildinfo
backend/: .gitignore  Dockerfile  RAILWAY.md  README.md  pyproject.toml  requirements.txt
backend/inspection_ai/: __init__.py
backend/inspection_ai/api/: __init__.py  app.py  main.py  models.py
backend/inspection_ai/application/: __init__.py  inspection_scoring_service.py  market_estimate_service.py  payload_assembler.py  pedigree_intelligence_service.py
backend/inspection_ai/domain/: versioning.py
backend/inspection_ai/feature_extraction/: pipeline.py
backend/inspection_ai/infrastructure/: supabase_client.py
backend/inspection_ai/intelligence_framework/: __init__.py  decision.py  m01_identity.py  m02_pedigree.py  m03_commercial.py  m07_risk.py  m09_final_score.py  m10_market.py  orchestrator.py
backend/inspection_ai/market_engine/: __init__.py  estimate.py
backend/inspection_ai/pedigree_engine/: __init__.py  intelligence_scorer.py
backend/inspection_ai/report_engine/: __init__.py  aggregator.py
backend/inspection_ai/research_engine/: __init__.py
backend/inspection_ai/scoring/: __init__.py  behaviour.py  biomechanics.py  confidence.py  conformation.py  constants.py  hoof.py  (+7 more)
backend/tests/: test_api.py  test_inspection_integration.py  test_intelligence_framework.py  test_market_engine.py  test_parity_constants.py  test_payload_assembler.py  test_pedigree_engine.py  test_scoring_engine.py
(+638 files in other folders)
