[project]
name = "bloodstockai-scientific-scoring"
version = "1.0.0"
description = "BloodstockAI Scientific Scoring Engine"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
